# AmazingHand

./: .gitignore  .pre-commit-config.yaml  FORK.md  README.md  README_PKG.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
ArduinoExample/: README.md
Demo/: README.md  dataflow_tracking_real_team_julia.yml  dataflow_tracking_real_team_krishan.yml
Demo/AHControl/: README.md
Demo/AHControl/src/: lib.rs  main.rs
Demo/AHSimulation/AHSimulation/: mj_mink_common.py  mj_mink_left.py  mj_mink_right.py
Demo/HandTracking/HandTracking/: main.py
Demo/Sensors/: README.md  ads1256.py  config.toml  haptic_coin.py  haptic_test.py  tactile_sensing.py  tactile_sensing_post_visualize.py
Demo/scripts/: check_devices.py
Demo/tests/: test_hand_tracking.py  test_mj_mink.py
PythonExample/: AmazingHand_Demo.py  AmazingHand_Demo_Both.py  AmazingHand_FingerTest.py  AmazingHand_Hand_FingerMiddlePos.py  README.md  common.py  config.toml  pyproject.toml
PythonExample/tests/: __init__.py  test_amazinghand_demo.py  test_canonical_config_contract.py  test_common.py  test_config.py  test_finger_demos.py
config/: hand_geometry.toml  profiles.toml
config/calibration/: l_hand_team_krishan.toml  r_hand_team_julia.toml  r_hand_team_krishan.toml
docs/: DEVELOPMENT.md  additional_assembly_guide.md  canonical_hand_config_design.md  contact.md  maintainer.md
src/amazinghand/: __init__.py  client.py  config.py  poses.py
src/amazinghand/config/: hand_geometry.toml  profiles.toml
tests/: test_amazinghand_sdk.py  test_config_platform.py
(+1 files in other folders)
