[project]
name = "amazinghand-python-example"
version = "0.1.0"
description = "Python examples and demos for Amazing Hand (Pollen Robotics)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20",
    "rustypot",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
